# claude-shim

./: .claude-shim.json  .gitignore  .hadolint.yaml  .workmux.yaml  CLAUDE.md  README.md  renovate.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/plans/: 2026-02-19-port-skills-from-deneb-design.md  2026-02-19-port-skills-from-deneb-plan.md  2026-02-19-remove-prefix-from-skill-names-design.md  2026-02-19-remove-prefix-from-skill-names-plan.md  2026-02-19-split-github-issue-skills-design.md  2026-02-19-split-github-issue-skills-plan.md  2026-02-20-add-issue-parent-support-design.md  2026-02-20-add-issue-parent-support-plan.md  2026-02-20-claude-code-hooks-plugin-design.md  2026-02-20-claude-code-hooks-plugin-plan-setup.md  2026-02-20-claude-code-hooks-plugin-plan.md  2026-02-20-claude-code-hooks-setup-design.md  2026-02-20-consolidate-skills-design.md  2026-02-20-consolidate-skills-plan.md  2026-02-20-github-actions-workflow-design.md  2026-02-20-github-actions-workflow-plan.md  2026-02-20-remove-draft-pr-creation-design.md  2026-02-20-remove-draft-pr-creation-plan.md  2026-02-20-set-owner-on-parent-design.md  2026-02-20-set-owner-on-parent-plan.md  (+54 more)
plugins/quality-check-hook/hook/: pyproject.toml
plugins/quality-check-hook/hook/scripts/: generate_schema.py
plugins/quality-check-hook/hook/src/quality_check_hook/: config.py  gitignore.py  main.py  matcher.py  runner.py
plugins/quality-check-hook/hook/tests/: test_config.py  test_gitignore.py  test_main.py  test_matcher.py  test_runner.py
(+67 files in other folders)
